# otus-microservice-architecture

./: .gitignore
bof-12/: README.md  (+2 more)
project/app/: Dockerfile  Makefile  docker-compose.yml  prometheus.yml  pyproject.toml
project/app/common/core/: __init__.py  authentication.py
project/app/delivery/: settings.py  urls.py
project/app/delivery/deliveryapp/: models.py
project/app/delivery/deliveryapp/migrations/: 0003_admin.py
project/app/finder/: settings.py  urls.py
project/app/finder/finderapp/: models.py  views.py
project/app/finder/finderapp/migrations/: 0001_initial.py  0003_admin.py
project/app/grafana-storage/: grafana.db
project/app/nginx/: my.conf
project/app/notifications/: settings.py  urls.py
project/app/notifications/notifyapp/: models.py  views.py
project/app/notifications/notifyapp/migrations/: 0001_initial.py  0002_alter_log_created_at.py  0003_alter_log_id.py  0004_alter_log_item.py  0005_admin.py
project/app/saga/: settings.py  urls.py
project/app/saga/sagaapp/: models.py  views.py
project/app/saga/sagaapp/migrations/: 0001_initial.py  0002_admin.py  0005_order_user.py
project/app/saga/sagaapp/services/: __init__.py  clean_data.py  events.py  order_service.py  services.py
project/app/store/: settings.py  urls.py
project/app/store/storeapp/: models.py  views.py
project/app/store/storeapp/migrations/: 0001_initial.py  0005_admin.py
project/app/transaction/: settings.py  urls.py
project/app/transaction/migrations/: 0001_initial.py  0003_admin.py
project/app/transaction/transactionapp/: models.py  views.py
(+114 files in other folders)
